Working model (Probably)

--- a/Spectrograms.ipynb
+++ b/Spectrograms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "b4224772",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "0f59be91",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "c803255b",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "f11a9089",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "cbbe18f0",
    "metadata": {
     "scrolled": false
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "4c2eaa5f",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "id": "511e2abf",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "da33b5e8",
    "metadata": {},
    "outputs": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "0a856a09",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "0b68600b",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
     "        time_end = float(raw_line[4])\n",
     "        \n",
     "        # we can use 0 for call and 1 for song\n",
-    "        obj_class = 0 if raw_line == \"call\" else 1\n",
+    "        obj_class = 0 if raw_line[10] == \"call\" else 1\n",
     "        \n",
     "        annotations.append([obj_class, time_begin, time_end])\n",
     "    \n",
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "f1f580aa",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
      "output_type": "stream",
      "text": [
       "240\n",
-      "1357\n"
+      "929\n"
      ]
     }
    ],
@@ -375,9 +375,6 @@
     "    time_begin = annotation[1]\n",
     "    clip_num = floor(time_begin/step)\n",
     "    \n",
-    "    # now we know we are at least in this clip\n",
-    "    insert_box(clip_num, annotation)\n",
-    "    \n",
     "    while (clip_num*step + clip_len) > time_begin:\n",
     "        insert_box(clip_num, annotation)\n",
     "        clip_num -= 1\n",
@@ -402,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "ee098d03",
    "metadata": {},
    "outputs": [],
@@ -429,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "4d09b00f",
    "metadata": {},
    "outputs": [],
